--- a/main.css
+++ b/main.css
@@ -154,6 +154,11 @@ button:active {
 
 #program-output {
 	margin-bottom: 100px;
+	overflow: hidden;
+	padding: 5%;
+	margin-right: auto;
+	margin-left: auto;
+	width: 600px;
 }
 
 #footer {
@@ -176,4 +181,14 @@ a:link, a:visited {
 
 a:hover, a:active {
 	text-decoration: underline;
+}
+
+.num {
+	display:none;
+	float: left;
+	width: 100px;
+	padding: 15px 5px;
+	border: 0;
+	border-radius: 5px;
+	background-color: #fff;
 }
