--- a/main.css
+++ b/main.css
@@ -157,7 +157,7 @@ button:active {
 #program-output {
 	margin-bottom: 100px;
 	overflow: hidden;
-	padding: 5%;
+	padding: 0 5%;
 	margin-right: auto;
 	margin-left: auto;
 	width: 600px;
@@ -169,6 +169,7 @@ button:active {
 	position: fixed;
 	bottom: 0;
 	padding: 20px 5%;
+	box-shadow: 0px -2px 2px #c3c3c3;
 }
 
 #footer p {
